--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </div>
         </section>
         <section>
-            <div id="card-container" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <div>
+            <div id="video-container" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <!-- <div>
                     <figure><img src="https://i.ibb.co/L1b6xSq/shape.jpg" class="rounded-lg" alt="Shoes" /></figure>
                     <div class="flex gap-3 pt-5">
                         <div>
@@ -79,7 +79,7 @@
                             <p class="text-color4 text-sm font-normal">91K views</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
