--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,45 +40,32 @@
 </head>
 <body style="font-family: 'Inter', sans-serif;" class="bg-white px-5">
     <header class="max-w-[1440px] mx-auto">
-        <nav class="pt-12 pb-8 grid grid-cols-3">
-            <div>
-                <a href="index.html"><img class="" src="images/Logo.png" alt="Logo"></a>
+        <nav class="pt-12 sm:pb-8 pb-20 sm:grid grid-cols-3">
+            <div class="w-1/3 sm:w-fit float-left sm:float-none">
+                <a href="index.html"><img src="images/Logo.png" alt="Logo"></a>
             </div>
-            <div class="text-center">
-                <button class="bg-btn2 text-color1 text-lg font-medium py-2.5 px-5 rounded">Sort by view</button>
+            <div class="text-center float-right sm:float-none pl-3 sm:pl-0">
+                <button class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">Sort by view</button>
             </div>
-            <div class="text-right">
-                <button class="bg-btn1 text-white text-lg font-medium py-2.5 px-5 rounded">Blog</button>
+            <div class="text-right float-right sm:float-none">
+                <button class="bg-btn1 text-white md:text-lg text-sm font-medium py-2.5 px-5 rounded">Blog</button>
             </div>
         </nav>
-        <hr>
+        <hr class="clear-both">
     </header>
 
     <!-- main section -->
     <main class="max-w-[1440px] mx-auto">
         <section>
-            <div class="text-center space-x-6 pt-8 pb-10">
-                <button class="bg-btn2 text-color1 text-lg font-medium py-2.5 px-5 rounded">All</button>
-                <button class="bg-btn2 text-color1 text-lg font-medium py-2.5 px-5 rounded">Music</button>
-                <button class="bg-btn2 text-color1 text-lg font-medium py-2.5 px-5 rounded">Comedy</button>
-                <button class="bg-btn2 text-color1 text-lg font-medium py-2.5 px-5 rounded">Drawing</button>
+            <div class="text-center lg:space-x-6 md:space-x-4 space-x-3 space-y-4 md:space-y-0 pt-8 pb-10">
+                <button onclick="categoryAll()" class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">All</button>
+                <button onclick="categoryMusic()" class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">Music</button>
+                <button onclick="categoryComedy()" class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">Comedy</button>
+                <button onclick="categoryDrawing()" class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">Drawing</button>
             </div>
         </section>
         <section>
             <div id="video-container" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <!-- <div>
-                    <figure><img src="https://i.ibb.co/L1b6xSq/shape.jpg" class="rounded-lg" alt="Shoes" /></figure>
-                    <div class="flex gap-3 pt-5">
-                        <div>
-                            <img class="w-16 rounded-full" src="https://i.ibb.co/D9wWRM6/olivia.jpg" alt="">
-                        </div>
-                        <div>
-                            <h2 class="text-color3 text-base font-bold">Building a Winning UX Strategy Using the Kano Model</h2>
-                            <p class="text-color4 text-sm font-normal pt-3 pb-1">Awlad Hossain</p>
-                            <p class="text-color4 text-sm font-normal">91K views</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </section>
     </main>
