--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
     <!-- main section -->
     <main class="max-w-[1440px] mx-auto">
         <section>
-            <!-- category button -->
+            <!-- category buttons -->
             <div id="category-container"></div>
-        </section>
 
-        <section>
             <!-- loading spinner -->
             <div id="loading-spinner"></div>
 
-            <!-- video card -->
+            <!-- video cards -->
             <div id="video-container"></div>
         </section>
     </main>
