--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="bg-btn2 text-color1 md:text-lg text-sm font-medium py-2.5 px-5 rounded">Sort by view</button>
             </div>
             <div class="text-right float-right sm:float-none">
-                <button class="bg-btn1 text-white md:text-lg text-sm font-medium py-2.5 px-5 rounded">Blog</button>
+                <button onclick="window.location.href='blog.html';" class="bg-btn1 text-white md:text-lg text-sm font-medium py-2.5 px-5 rounded">Blog</button>
             </div>
         </nav>
         <hr class="clear-both">
